tests/ui/coercion/coerce-issue-49593-box-never.nofallback.stderr
error[E0277]: the trait bound `(): std::error::Error` is not satisfied
  --> $DIR/coerce-issue-49593-box-never.rs:17:5
   |
LL |     Box::<_ /* ! */>::new(x)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::error::Error` is not implemented for `()`
   |
   = note: required for the cast from `Box<()>` to `Box<(dyn std::error::Error + 'static)>`

error[E0277]: the trait bound `(): std::error::Error` is not satisfied
  --> $DIR/coerce-issue-49593-box-never.rs:23:5
   |
LL |     raw_ptr_box::<_ /* ! */>(x)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::error::Error` is not implemented for `()`
   |
   = note: required for the cast from `*mut ()` to `*mut (dyn std::error::Error + 'static)`

error[E0277]: the size for values of type `(dyn std::error::Error + 'static)` cannot be known at compilation time
  --> $DIR/coerce-issue-49593-box-never.rs:30:5
   |
LL |     d as *mut _
   |     ^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `(dyn std::error::Error + 'static)`
   = note: required for the cast from `*mut (dyn std::error::Error + 'static)` to `*mut (dyn std::error::Error + 'static)`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
